[gd_scene load_steps=2 format=3 uid="uid://blpcnbt12u561"]

[ext_resource type="Script" uid="uid://crj18k5nnfe5v" path="res://stocks.gd" id="1_at11h"]

[node name="Stocks" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_at11h")

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 3.0
offset_right = 195.0
offset_bottom = 87.0
theme_override_font_sizes/font_size = 36
text = "Go Back"

[node name="Button3" type="Button" parent="."]
layout_mode = 0
offset_left = 405.0
offset_top = 343.0
offset_right = 608.0
offset_bottom = 460.0
theme_override_font_sizes/font_size = 48
text = "Buy x10 $45"

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 146.0
offset_top = 341.0
offset_right = 375.0
offset_bottom = 458.0
theme_override_font_sizes/font_size = 48
text = "Buy x1 $5"

[node name="Button4" type="Button" parent="."]
layout_mode = 0
offset_left = 720.0
offset_top = 346.0
offset_right = 1059.0
offset_bottom = 463.0
theme_override_font_sizes/font_size = 48
text = "Buy x100 $475"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 318.0
offset_top = 171.0
offset_right = 797.0
offset_bottom = 293.0
theme_override_font_sizes/font_size = 56
text = "Stocks:"
vertical_alignment = 1

[node name="Button5" type="Button" parent="."]
layout_mode = 0
offset_left = 816.0
offset_top = 207.0
offset_right = 968.0
offset_bottom = 284.0
theme_override_font_sizes/font_size = 42
text = "Sell All"

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 684.0
offset_right = 1153.0
offset_bottom = 104.0
theme_override_font_sizes/font_size = 48
text = "Clicks:"
vertical_alignment = 1
